--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Check MK and dependencies
-  yum: name='{{item}}' state=present validate_certs={{check_mk_agent_validate_certs}}
+  yum: name='{{item}}' state=latest validate_certs={{check_mk_agent_validate_certs}}
   with_items:
     - '{{check_mk_agent_rpm}}'
     - xinetd
