--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,7 +6,7 @@
 check_mk_agent_rpm_url:
 
 # Skip cert validation, ie your Check_MK site has a self signed certificate
-check_mk_agent_validate_certs: yes
+check_mk_agent_validate_certs: true
 
 # List of Check_MK servers to allow connection from
 check_mk_agent_servers:
